# state-cartographer

./: .codexignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  PROGRESS.md  README.md  issue-001-environment-integration.md  novel-capabilities-enumeration.md  plan.md  pyproject.toml  pytest.ini  revisions-and-open-design-spaces.md  state-machine-tooling-synthesis.md  testing-strategy.md
.claude-plugin/: plugin.json
.githooks/: pre-commit  pre-push
agents/: consolidator.md  explorer.md
commands/: calibrate.md  graph-info.md  locate.md  observe.md  pathfind.md  validate.md
configs/: ldplayer.json  memu.json
docs/: AGENTS.md  ALAS_interaction_logs.md  NORTH_STAR.md  PR-2026-03-28-pilot-harness-and-keymapping.md  REPO_STATUS.md  VLM_ARCHITECTURE.md  VLM_EXECUTION_PLAN.md  VLM_NORTH_STAR.md  adb-backend-hardening.md  architecture-diagram.html  architecture-overview.md  architecture.md  black-frame-cleanup.md  bootstrap.md  data-collection.md  decisions.md  documentation-playbook.md  north-star.md  phase1-3-execution-report.md  phase2-recovery-plan.md  redesign-plan.md  repo-index.md  revisions-and-open-design-spaces.md  session-notes-2026-03-19.md  testing-strategy.md  todo.md  transport-methods.md  workflows.md
hooks/: hooks.json  post_write.py
quarantine/: README.md
rules/: graph-maintenance.md  orientation.md
runtime/: __init__.py  main.py
scripts/: _droidcast_test.py  adb_bridge.py  alas_action_inventory.py  alas_command_inventory.py  alas_converter.py  alas_corpus_summarize.py  alas_event_instrumentation.py  alas_log_parser.py  alas_observe_runner.py  alas_sidecar.py  analyze_framebuffer.py  benchmark_screenshot.py  calibrate.py  calibrate_from_corpus.py  census_extract.py  corpus_cleanup.py  corpus_sweep.py  delete_black_frames.py  dock_census_capture.py  emulator_config.py  execution_event_log.py  executor.py  graph_utils.py  kimi_review.py  label_raw_stream.py  locate.py  memu_dump.py  memu_transport.py  observe.py  pathfind.py  pilot_bridge.py  resource_model.py  scheduler.py  schema_validator.py  scrcpy_client_worker.py  screenshot_dedupe.py  screenshot_mock.py  session.py  siphon.py  state_enumeration_score.py  (+7 more)
state_cartographer/: __init__.py  run_recording.py
tests/: conftest.py  png_factory.py  test_adb_bridge.py  test_alas_action_inventory.py  test_alas_command_inventory.py  test_alas_converter.py  test_alas_corpus_summarize.py  test_alas_event_instrumentation.py  test_alas_log_parser.py  test_alas_observe_runner.py  test_alas_sidecar.py  test_calibrate.py  test_calibrate_from_corpus.py  test_census_extract.py  test_corpus_cleanup.py  test_corpus_sweep.py  test_dock_census_capture.py  test_execution_event_log.py  test_executor.py  test_graph_utils.py  test_integration.py  test_label_raw_stream.py  (+17 more)
(+237 files in other folders)
