[project]
name = "state-cartographer"
version = "1.0.0"
description = "Claude Code plugin for building queryable state graphs of external systems"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "openai>=2.29.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
vision = [
    "transitions>=0.9.0",
    "Pillow>=10.0.0",
    "imagehash>=4.3.0",
    "openai>=1.68.0",
]
piloting = [
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0.84",
    "openai>=1.68.0",
]
dev = [
    "ruff>=0.11",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
extend-exclude = ["vendor"]
force-exclude = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by formatter
    "SIM108", # ternary operator — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["scripts", "screenshot_mock", "locate", "pathfind", "session", "graph_utils", "schema_validator", "alas_log_parser", "alas_converter", "siphon", "observe", "calibrate", "adb_bridge"]
